# Cart-Pole

./: .gitignore  README.md  pyproject.toml
proj/: cart_pole_env.py  control.c  env.py  hello.py  lqr_control.py  ppo.py  ppo_MultiCore.py  predict.py  test_env.py
proj/modified_env/: LinearEnv.py  bin_2_h.py  collect_data.py  env.py  forward.c  lqr.py  nn_env_test.py  predict.py  pth_2_bin.py  test.py  train_bm.py
proj/modified_env/matrix/: lqr_expert.mat  physics_model.mat  reward_weights.mat
proj/mujoco_env/: cart_pole_env.py  hello.py  plot_only.py  predict.py  test_env.py  train_ppo_v13.py  training_summary.md  扭矩.py
proj/mujoco_env/history_version/: balance_visualize.py  cart_pole_env_v10.py  cart_pole_env_v11.py  cart_pole_env_v3.py  cart_pole_env_v4.py  cart_pole_env_v5.py  cart_pole_env_v6.py  cart_pole_env_v8.py  cart_pole_env_v9.py  check_action_scale.py  check_sensors.py  check_v1_logs.py  compare_all_models.py  compare_sensors.py  curriculum_wrapper.py  debug_policy.py  debug_sensor_dims.py  debug_sensors.py  debug_v8_sensors.py  find_best_model.py  lqr_control.py  predict.py  random_baseline.py  test_best_vs_final.py  test_curriculum.py  test_extended_best.py  test_extended_ppo.py  test_lqr.py  test_original.py  test_random_baseline.py  test_sac_model.py  test_sac_v10.py  test_v10_env.py  test_v1_detailed.py  test_v3_model.py  test_v4_env.py  test_v4_model.py  test_v4_model2.py  test_v5_final.py  test_v5_model.py  (+25 more)
proj/mujoco_env/xml/: cartpole.xml  cartpole_old.xml
proj/xml/: cartpole.xml  test.xml
(+65 files in other folders)
