[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium[other]>=1.1.1",
    "imageio>=2.37.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mediapy",
    "mujoco>=3.5.0",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "rich>=15.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
]
